force-app/main/default/objects/Professional_Achievement__c/Professional_Achievement__c.object-meta.xml
<CustomObject>
    <description>Professional Achievement [ Academic Education | Professional Certification | Honors Award | Skill Learning | Resume Profile | Identity Logo  ]</description>
    <label>Professional Achievement</label>
    <nameField>
        <displayFormat>CRD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Achievement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>