force-app/main/default/objects/Professional_Achievement__c/fields/Achievement_Name__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Name__c</fullName>
    <label>Achievement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>