force-app/main/default/objects/Professional_Achievement__c/fields/Available_URL__c.field-meta.xml
<CustomField>
    <fullName>Available_URL__c</fullName>
    <label>Available URL</label>
    <type>Url</type>
</CustomField>