force-app/main/default/objects/Professional_Achievement__c/fields/Extra_Data__c.field-meta.xml
<CustomField>
    <fullName>Extra_Data__c</fullName>
    <label>Extra Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>