force-app/main/default/objects/Professional_Achievement__c/fields/Hashtags__c.field-meta.xml
<CustomField>
    <fullName>Hashtags__c</fullName>
    <label>Hashtags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>