force-app/main/default/objects/Professional_Achievement__c/fields/Techstack__c.field-meta.xml
<CustomField>
    <fullName>Techstack__c</fullName>
    <label>Techstack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>