force-app/main/default/objects/Professional_Achievement__c/recordTypes/Academic_Education.recordType-meta.xml
<RecordType>
    <fullName>Academic_Education</fullName>
    <active>true</active>
    <label>Academic Education</label>
</RecordType>