force-app/main/default/objects/Professional_Achievement__c/recordTypes/Honors_Award.recordType-meta.xml
<RecordType>
    <fullName>Honors_Award</fullName>
    <active>true</active>
    <label>Honors Award</label>
</RecordType>