force-app/main/default/objects/Professional_Achievement__c/recordTypes/Identity_Logo.recordType-meta.xml
<RecordType>
    <fullName>Identity_Logo</fullName>
    <active>true</active>
    <label>Identity Logo</label>
</RecordType>