force-app/main/default/objects/Professional_Achievement__c/recordTypes/Professional_Certification.recordType-meta.xml
<RecordType>
    <fullName>Professional_Certification</fullName>
    <active>true</active>
    <label>Professional Certification</label>
</RecordType>