force-app/main/default/objects/Professional_Achievement__c/recordTypes/Resume_Profile.recordType-meta.xml
<RecordType>
    <fullName>Resume_Profile</fullName>
    <active>true</active>
    <label>Resume Profile</label>
</RecordType>