force-app/main/default/objects/Professional_Achievement__c/recordTypes/Skill_Learning.recordType-meta.xml
<RecordType>
    <fullName>Skill_Learning</fullName>
    <active>true</active>
    <label>Skill Learning</label>
</RecordType>